# horsep

./: CHANGELOG.md  README.md  horsep.cabal
.github/workflows/: ci.yml
app/: Horsep.hs
test/: Main.hs
