cabal-version:      2.4
name:               horsep
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         giakhanh2487@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library horsep-lib
    exposed-modules:
        Horsep
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions: OverloadedStrings
    build-depends:    base >=4.11
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite horsep-test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    default-extensions: OverloadedStrings
    build-depends:
        base >=4.11
      , hspec
      , HUnit
      , horsep-lib
    hs-source-dirs:   test
    default-language: Haskell2010